--- a/allweb.html
+++ b/allweb.html
@@ -91,6 +91,7 @@
             "一键创房工具": "http://dadao.kuaibiji.info/#/wzsb",
             "小鬼自定义": "http://xg5020.top/xg.html",
             "流年自定义": "http://xg5020.top/liunian/index.html",
+            "小刻晴自定义":"https://github.com/Keqingzdy/kqzdy",
             "本网站-刻晴自定义": "http://keqingzidingyi.pxwl.xyz"
         };
 
