--- a/zanz.html
+++ b/zanz.html
@@ -59,15 +59,15 @@
   <p>长按或截图保存二维码</p>
   <div class="qr-code-container">
     <div class="qr-code">
-      <img src="wx.png" alt="微信二维码">
+      <img src="wx.png" alt="wx">
       <p>微信</p>
     </div>
     <div class="qr-code">
-      <img src="zfb.png" alt="支付宝二维码">
+      <img src="zfb.png" alt="zfb">
       <p>支付宝</p>
     </div>
     <div class="qr-code">
-      <img src="qq.png" alt="QQ钱包二维码">
+      <img src="qq.png" alt="qq">
       <p>QQ钱包</p>
     </div>
   </div>
