--- a/Smoba.html
+++ b/Smoba.html
@@ -236,7 +236,7 @@
             请不要在我的群内出现萝莉姐[山海]自定义
         </div>
         <div class="footer">
-            &copy; 2024 版权归迟言所有
+            &copy; 2024 版权归本人所有
         </div>
     </div>
     <script src="https://www.hcw3.cn/api/texiao/sakura.js"></script>
