--- a/allweb.html
+++ b/allweb.html
@@ -82,7 +82,7 @@
         作者已拉黑萝莉姐[山海]，请不要在我的群内出现萝莉姐[山海]自定义<br>本网页也不可能添加萝莉姐[山海]自定义
     </div>
     <div class="footer">
-        &copy; 2024 版权归迟言所有
+        &copy; 2024 版权归刻晴所有
     </div>
     <script>
         // 网站集合的JSON对象
@@ -91,8 +91,7 @@
             "一键创房工具": "http://dadao.kuaibiji.info/#/wzsb",
             "小鬼自定义": "http://xg5020.top/xg.html",
             "流年自定义": "http://xg5020.top/liunian/index.html",
-            "小刻晴自定义":"https://github.com/Keqingzdy/kqzdy",
-            "本网站-刻晴自定义": "http://keqingzidingyi.pxwl.xyz"
+            "本网站-迟言自定义": "https://wzzdy.onrender.com/"
         };
 
         // 遍历JSON对象并添加项目到页面
