--- a/FAQ.html
+++ b/FAQ.html
@@ -134,7 +134,7 @@
             <span class="faq-arrow">▾</span>
         </div>
         <div id="faq11" class="faq-answer">
-            迟言在此向您保证，本网站永久免费使用，我们连赞助也是一直提倡自愿原则，感谢您的支持。
+            刻晴在此向您保证，本网站永久免费使用，我们连赞助也是一直提倡自愿原则，感谢您的支持。
         </div>
         <script>
             document.addEventListener('DOMContentLoaded', function() {
