--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
     <script id="LA-DATA-WIDGET" crossorigin="anonymous" charset="UTF-8"
         src="https://v6-widget.51.la/v6/3IVcSI6fQo7LpaTc/quote.js?theme=0&col=true&f=12&display=1,0,1,1,1,1,1,1"></script>
     <div class="footer">
-        &copy; 版权声明：本网站最终解释权归本人所有，严禁倒卖
+        &copy; 版权声明：本网站最终解释权归刻晴所有，严禁倒卖
     </div>
 </body>
 
