--- a/zhanli.html
+++ b/zhanli.html
@@ -44,7 +44,7 @@ type="text/javascript">
                 <br>
             </div>
             <div class="alert alert-info" id="alias">
-                迟言王者战力查询系统
+                刻晴王者战力查询系统
             </div>
         </center>
         <div class="input-group">
@@ -89,7 +89,7 @@ type="text/javascript">
     <div class="table-responsive" id="mydiv" style="text-align:center;">
     </div>
     <center>
-        <a href="https://wzzdy.onrender.com" p style="text-align:center"><span style="color: #999">Copyright &copy; 2024 迟言 all rights reserved
+        <a href="https://keqingzdy.github.io/kqzdy/" p style="text-align:center"><span style="color: #999">Copyright &copy; 2024 刻晴 all rights reserved
         </a></span>
         </p>
     </center>
